# 2026-06-04_claude-motion-design

./: .gitignore  CLAUDE.md  PANELS-REDESIGN-HANDOFF.md  PLAN.md  PROJECT.md  PROPOSAL-roto-bugbash-2.md  PROPOSAL-roto-bugbash-3-controls.md  PROPOSAL-roto-bugbash.md  README.md  SETUP.md  frieren.sh  index.html  package-lock.json  package.json
.charm/kb/: CONTRIBUTING.md  INDEX.md  animation-libraries.md  anthropic-api-integration.md  anthropic-oauth-2026.md  auth-google-oauth.md  backend-architecture.md  claude-code-webapp.md  claudedesignskills-research.md  client-side-rendering.md  code-execution-sandbox.md  dynamodb-schema.md  export-rendering-pipeline.md  file-management-reuse-research.md  frontend-architecture.md  frontend-backend-sync.md  frontend-options-and-local-claude.md  handoff-2026-06-04-session2-fps-and-inflight.md  handoff-2026-06-04-ui-storage-batch.md  image-description-research.md  image-file-handling.md  mcpmarket-motion-research.md  platform-safe-zones.md  prompt-engineering.md  remotion-mcp.md  replay-controls.md  synthesis.md  terraform-aws-infra.md  typeui-designskills-research.md
.charm/kb/architecture/: _index.md  preview-sandbox.md
.charm/kb/conventions/: _index.md  app-owns-loop-state.md  cli-system-prompt-single-file.md  ig-extraction-md-frontmatter.md  ig-frontend-contract-mirror.md  ig-panel-slot-contract.md  ig-stage-subprocess-cli-contract.md  (+6 more)
.charm/proposals/: PROPOSAL-instagram-pipeline.md  PROPOSAL-roto-assets-outputs-ux.md  PROPOSAL-roto-editor-controls-ux.md  PROPOSAL-rotoscoping-microservice.md  PROPOSAL-skills-prompt-fixes.md  PROPOSAL_skills-and-context-management.md  SPIKE-instagram-pipeline.md
.claude/: settings.json
microservices/rotoscoping/: .gitignore  README.md  config.py  ffmpeg_helper.py  job_registry.py  logging_setup.py  main.py  pyproject.toml  sam2_engine.py  start.bat
scripts/: build-preview-runtime.mjs  build-render-toolchain.mjs  render-mp4.mjs
scripts/ig-pipeline/: README.md  analyze.ts  bunfig.toml  clip.ts  download.ts  frames.ts  package.json  run.e2e.test.ts  run.ts  score.test.ts  score.ts  store.ts  tsconfig.json  types.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitignore  remotion-image-skills.txt  remotion-mcp-config.json  remotion-skills-layout.txt  remotion-skills-motion.txt  remotion-skills.txt
src-tauri/src/: claude_bridge.rs  file_watch.rs  lib.rs  main.rs  pty_bridge.rs
src-tauri/src/commands/: claude.rs  export.rs  ig_pipeline.rs  projects.rs  render_toolchain.rs  roto_media.rs  rotoscoping.rs  zip.rs
src/assets/: sandbox-frame.html
src/components/: Onboarding.tsx  RenderModal.tsx  Settings.tsx  icons.tsx
src/hooks/: useClaude.ts  useMonaco.ts  useRotoJobQueue.ts
src/lib/: codeExtractor.ts  promptBuilder.ts
src/store/: igStore.ts  projectStore.ts  renderLogStore.ts  rotoStore.ts  themeStore.ts  uiStore.ts  workspaceStore.ts
src/types/: ig.ts  index.ts  roto.ts
src/workers/: sandbox-compiler.worker.ts
(+188 files in other folders)
