[package]
name = "claude-motion"
version = "0.1.0"
description = "ClaudeMotion - AI-driven Remotion animation studio"
authors = ["Finks"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_motion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
# Interactive Claude CLI runs inside a pseudo-terminal so it behaves like a real
# tty (ANSI, line editing, its own tool UI); spawned directly by the OS, not the
# Tauri shell plugin, so no shell capability is involved.
portable-pty = "0.8"
# Watches the project's animation.tsx so the editor/preview track what Claude
# writes in the terminal.
notify = "6"
# Downloading + verifying + unpacking the MP4-render toolchain on first render
# (render_toolchain.rs). rustls so we don't depend on a system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
